--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,12 +16,13 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.EC2_SSH_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-      - name: Deploy index.html to EC2
+      - name: Add EC2 to known_hosts
         run: |
-          scp -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa app/index.html ec2-user@${{ secrets.EC2_HOST }}:/tmp/index.html
-      - name: Move file and restart nginx
+          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
+      - name: Deploy code to EC2
         run: |
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ec2-user@${{ secrets.EC2_HOST }} '
-            sudo mv /tmp/index.html /usr/share/nginx/html/index.html &&
+          ssh ec2-user@${{ secrets.EC2_HOST }} << 'EOF'
+            echo "<h1>Deployed via GitHub Actions at $(date)</h1>" | sudo tee /usr/share/nginx/html/index.html
             sudo systemctl restart nginx
-            '
+          EOF
+
